--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY portfolio</title>
+    <link rel="stylesheet" href="../CSSpart/style.css" />
   </head>
   <body>
     <header>
       <div class="my">
-        <a href="#">Wakjira</a>
+        <a href="#">W.Tasama</a>
       </div>
       <div class="about">
-        <a href="">Home</a>
+        <a class="home" href="">Home</a>
         <a href="">About</a>
         <a href="">Service</a>
         <a href="">Portfolio</a>
