--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -19,6 +19,12 @@
         <a href="">contact</a>
       </div>
     </header>
-    <section></section>
+    <section>
+      <div>
+        <h1></h1>
+        <h2></h2>
+        <p></p>
+      </div>
+    </section>
   </body>
 </html>
