--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -24,6 +24,12 @@
         <h1></h1>
         <h2></h2>
         <p></p>
+        <div>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
       </div>
     </section>
   </body>
