this my image and icons

--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -19,16 +19,28 @@
         <a href="">contact</a>
       </div>
     </header>
-    <section>
+    <section class="sec">
       <div>
-        <h1></h1>
-        <h2></h2>
-        <p></p>
+        <img src="" alt="" />
+      </div>
+      <div class="home">
+        <h1>Hii, I'm Wakjira</h1>
+        <h2>Full Stack Developer</h2>
+        <p>
+          I am a dedicated full-stack web developer with a bachelor's degree in
+          software engineering from ASTU University. With expertise in HTML,
+          CSS, JavaScript, Node.js, React, and database programming, I
+          specialize in building scalable and high-performance web applications.
+          I have contributed to projects for major companies like Apple, Amazon,
+          and Garage, delivering innovative digital solutions. Passionate about
+          problem-solving and user experience, I thrive on creating seamless and
+          efficient web platforms.
+        </p>
         <div>
           <a href=""></a>
           <a href=""></a>
           <a href=""></a>
-          <a href=""></a>
+          <button>Download CV</button>
         </div>
       </div>
     </section>
