--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -20,10 +20,10 @@
       </div>
     </header>
     <section class="sec">
-      <div>
+      <div class="imags">
         <img src="" alt="" />
       </div>
-      <div class="home">
+      <div class="homed">
         <h1>Hii, I'm Wakjira</h1>
         <h2>Full Stack Developer</h2>
         <p>
@@ -36,7 +36,7 @@
           problem-solving and user experience, I thrive on creating seamless and
           efficient web platforms.
         </p>
-        <div>
+        <div class="icons">
           <a href=""></a>
           <a href=""></a>
           <a href=""></a>
