--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -24,7 +24,7 @@
         <img src="" alt="" />
       </div>
       <div class="homed">
-        <h1>Hii, I'm Wakjira</h1>
+        <h1>Hi, I'm Wakjira</h1>
         <h2>Full Stack Developer</h2>
         <p>
           I am a dedicated full-stack web developer with a bachelor's degree in
@@ -37,11 +37,11 @@
           efficient web platforms.
         </p>
         <div class="icons">
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <button>Download CV</button>
+          <a href="../imag/OIP (3).jpeg"></a>
+          <a href="../imag/t.jpeg"></a>
+          <a href="../imag/th.jpeg"></a>
         </div>
+        <button>Download CV</button>
       </div>
     </section>
   </body>
