--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -24,7 +24,7 @@
         <img src="" alt="" />
       </div>
       <div class="homed">
-        <h1>Hi, I'm Wakjira</h1>
+        <h1>Hi, I'm wakula</h1>
         <h2>Full Stack Developer</h2>
         <p>
           I am a dedicated full-stack web developer with a bachelor's degree in
@@ -37,9 +37,9 @@
           efficient web platforms.
         </p>
         <div class="icons">
-          <a href="../imag/OIP (3).jpeg"></a>
-          <a href="../imag/t.jpeg"></a>
-          <a href="../imag/th.jpeg"></a>
+          <a href=""><img src="../imag/OIP (3).jpeg" alt="" /></a>
+          <a href=""><img src="../imag/t.jpeg" alt="" /></a>
+          <a class="fb" href=""><img src="../imag/th.jpeg" alt="" /></a>
         </div>
         <button>Download CV</button>
       </div>
