--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -20,9 +20,7 @@
       </div>
     </header>
     <section class="sec">
-      <div class="imags">
-        <img src="" alt="" />
-      </div>
+      <div class="imgn"></div>
       <div class="homed">
         <h1>Hi, I'm wakula</h1>
         <h2>Full Stack Developer</h2>
