--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -20,9 +20,11 @@
       </div>
     </header>
     <section class="sec">
-      <div class="imgn"></div>
+      <div class="imgn">
+        <img src="../imag/IMG_1041a.jpg" alt="" />
+      </div>
       <div class="homed">
-        <h1>Hi, I'm wakula</h1>
+        <h1>Hi, I'm</h1>
         <h2>Full Stack Developer</h2>
         <p>
           I am a dedicated full-stack web developer with a bachelor's degree in
