--- a/HTMLpart/myindex.html
+++ b/HTMLpart/myindex.html
@@ -13,7 +13,7 @@
       </div>
       <div class="about">
         <a class="home" href="">Home</a>
-        <a href="">About</a>
+        <a href=".homed">About</a>
         <a href="">Service</a>
         <a href="">Portfolio</a>
         <a href="">contact</a>
